ruffle_gc/tests/compile_fails/allocate.stderr
error[E0499]: cannot borrow `ctx` as mutable more than once at a time
  --> tests/compile_fails/allocate.rs:8:5
   |
6  |     let data = ctx.allocate("Test".to_string());
   |                -------------------------------- first mutable borrow occurs here
7  |     // Shouldn't be able to collect while an unrooted borrow exists:
8  |     ctx.collect(); // Can't mutably borrow context twice.
   |     ^^^^^^^^^^^^^ second mutable borrow occurs here
9  |
10 |     println!("{}", data.borrow(&ctx));
   |                    ---- first borrow later used here

error[E0502]: cannot borrow `ctx` as immutable because it is also borrowed as mutable
  --> tests/compile_fails/allocate.rs:10:32
   |
6  |     let data = ctx.allocate("Test".to_string());
   |                -------------------------------- mutable borrow occurs here
...
10 |     println!("{}", data.borrow(&ctx));
   |                         ------ ^^^^ immutable borrow occurs here
   |                         |
   |                         mutable borrow later used by call
